# snake

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: CMakeLists.txt  Main.c
